# wavesurf

./: .gitignore  LICENSE  README.md  cypress.config.js  index.html  package.json  pyproject.toml  sync.toml
.github/workflows/: pages.yml  publish.yml  sync-check.yml
cypress/e2e/: compare.cy.js  examples.cy.js  options.cy.js  playback.cy.js  rendering.cy.js
cypress/fixtures/: generate_fixtures.py
cypress/support/: commands.js
docs/: jupyter-widgets-dev-guide.md  wavesurf.js-api.md
examples/: bars.html  basic.html  controls.html  custom_theme.html  generate_examples.py  gradients.html  index.html  layout.html  minimap.html  regions.html  spectrogram.html  themes.html  timeline.html
scripts/: run_tests.sh  sync_upstream.py
tests/: conftest.py
tests/e2e/: conftest.py  test_compare.py  test_examples.py  test_options.py  test_playback.py  test_rendering.py
tests/e2e/fixtures/: generate_fixtures.py
tests/integration/: test_sync_live.py
tests/unit/: test_audio.py  test_core.py  test_edge_cases.py  test_events.py  test_html.py  test_options.py  test_sync.py  test_theme.py
wavesurf/: __init__.py  _audio.py  _controls.py  _core.py  _events.py  _html.py  _layouts.py  _options.py  _plugins.py  _theme.py
