[project]
name = "wavesurf"
version = "0.1.1"
description = "Interactive audio waveform players for Jupyter notebooks, powered by wavesurfer.js"
authors = [
    { name = "captivus", email = "366332+captivus@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["audio", "waveform", "wavesurfer", "jupyter", "notebook", "visualization", "player"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Jupyter",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
torch = [
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupytext>=1.19.1",
    "nbconvert>=7.17.0",
    "notebook>=7.5.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.2",
    "pytest-playwright-visual-snapshot>=0.5.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/captivus/wavesurf"
Repository = "https://github.com/captivus/wavesurf"
Issues = "https://github.com/captivus/wavesurf/issues"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
addopts = "--browser chromium"

